# tessera

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  web.yml
deploy/: README.md  cloudrun.sh  docker-compose.airgapped.yml
docs/: cost-routing.md  demo.md  deploy.md  failure-classes.md  how-it-works.md  index.md  pytorch.md  quickstart.md  receipts.md  why.md
docs/stylesheets/: extra.css
examples/: demo_pytorch.py
src/tessera/: __init__.py  cli.py  contract.py  runtime.py
src/tessera/agent/: __init__.py  llm.py  llm_resolve.py  pipeline.py  resolver.py  sql.py
src/tessera/api/: __init__.py  app.py  models.py  security.py
src/tessera/ledger/: __init__.py  controls.py  generator.py  schema.py  warehouse.py
src/tessera/mcp/: __init__.py  server.py
src/tessera/receipt/: __init__.py  canonical.py  keys.py  receipt.py
src/tessera/routing/: __init__.py  bench.py  router.py  tiers.py
src/tessera/semantic/: __init__.py  loader.py  metrics.yaml
src/tessera/verifier/: __init__.py  counterfactuals.py  sqlcheck.py  verify.py
tests/: test_agent.py  test_api.py  test_contract.py  test_control_totals.py  test_generator.py  test_ledger_invariants.py  test_llm_tier.py  test_receipt.py  test_routing.py  test_runtime_mcp.py  test_semantic.py  test_verifier.py  test_version.py
web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/ask/: route.ts
web/app/api/verify/: route.ts
web/components/: AnswerCard.tsx  DemoPlayer.tsx  EvidenceDrawer.tsx  LiveTry.tsx  QuestionBar.tsx
web/lib/: types.ts
web/social/: social_tessera.html
