[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-analytics"
version = "0.1.0"
description = "Attested natural-language analytics for regulated finance — every number ships with the executed SQL, an independent runtime verdict, and a signed, auditor-verifiable receipt."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amit Patole", email = "amit.patole@gmail.com" }]
keywords = ["llm", "text-to-sql", "analytics", "finance", "verification", "attestation", "general-ledger"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "agentsensory>=0.1",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy deps live behind extras and are lazy-imported — the base wheel stays light.
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "psycopg[binary]>=3.2"]
llm = ["langgraph>=0.2", "langchain-core>=0.3"]
crypto = ["cryptography>=43"]
# dev pulls the runtime extras the gate must exercise (signing needs cryptography) so CI tests them.
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "cryptography>=43"]

[project.scripts]
tessera = "tessera.cli:main"

[project.urls]
Homepage = "https://github.com/amitpatole/tessera"
Repository = "https://github.com/amitpatole/tessera"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
